# triple_project

./: CMakeLists.txt  README.txt  pythashki.h  start.cpp  startandPrint.cpp  swapElements.cpp  victoryAndMain(byAlexey).cpp  victoryAndMain.cpp
